[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.2"
rust-version = "1.65.0"
license = "BSD-3-Clause"
repository = "https://github.com/jpreprocess/jlabel"
keywords = ["tts", "openjtalk", "library"]
categories = ["encoding"]

[workspace.package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.dependencies]
jlabel = { path = "crates/jlabel", version = "0.1.2" }
jlabel-question = { path = "crates/jlabel-question", version = "0.1.2" }

thiserror = "1.0.56"
