[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
rust-version = "1.85.0"
license = "BSD-3-Clause"
repository = "https://github.com/jpreprocess/jlabel"
keywords = ["tts", "openjtalk", "library"]
categories = ["encoding"]

[workspace.dependencies]
thiserror = "2"
