[package]
name = "jlabel-question"
edition = "2021"
description = "HTS-style full-context label question parser and matcher"

documentation = "https://docs.rs/jlabel-question"

version.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
regex = ["dep:regex-automata", "dep:regex-syntax"]

[dependencies]
thiserror = "1.0.56"
jlabel.workspace = true

regex-automata = { version = "0.4.4", optional = true }
regex-syntax = { version = "0.8.2", optional = true }
