[package]
name = "jlabel-question"
edition = "2021"

version.workspace = true
rust-version.workspace = true

[features]
regex = ["dep:regex-automata", "dep:regex-syntax"]

[dependencies]
jlabel.workspace = true
thiserror.workspace = true

regex-automata = { version = "0.4.4", optional = true }
regex-syntax = { version = "0.8.2", optional = true }
