[package]
name = "jlabel-question"
description = "HTS-style full-context label question parser and matcher"

documentation = "https://docs.rs/jlabel-question"
version = "0.1.5"

edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
regex = ["dep:regex-automata", "dep:regex-syntax"]
serde = ["dep:serde"]

[dependencies]
jlabel = { path = "../jlabel", version = "0.1.5" }
thiserror.workspace = true

regex-automata = { version = "0.4", optional = true }
regex-syntax = { version = "0.8", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
