[package]
name = "jlabel"
edition = "2021"
description = "HTS-style full-context label structure and parser/serializer from/to string"

documentation = "https://docs.rs/jlabel-question"

version.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
serde = ["dep:serde"]
napi = ["dep:napi", "dep:napi-derive"]

[dependencies]
thiserror.workspace = true

serde = { version = "1", features = ["derive"], optional = true }
napi = { version = "2", optional = true }
napi-derive = { version = "2", optional = true }
