[package]
name = "jlabel"
description = "HTS-style full-context label structure and parser/serializer from/to string"

documentation = "https://docs.rs/jlabel"
version = "0.1.4"

edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
serde = ["dep:serde"]

[dependencies]
thiserror.workspace = true

serde = { version = "1", features = ["derive"], optional = true }
